--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-DB_CONN=mongodb+srv://marius:zxcvbnm1234@cluster0-fmgpl.mongodb.net/test?retryWrites=true&w=majority
-DB_API_KEY=09261a25-470b-4210-852b-952a568d0995
+DB_CONNECTION=mongodb://mongo:27017/docker-node-mongo
